src/test/controlFlow/if_bool_error.cps
function f(): void {
  if (1) { }    // error: condición no boolean
}
